--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/resource/messages_pt_BR.properties
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/resource/messages_pt_BR.properties
@@ -41,6 +41,9 @@ msgNoneAdvertisementToMe = Nenhum anúncio encontrado.
 msgToCreateNewAdvertisement = para anunciar já!
 msgLock = Bloquear
 msgUnlock = Ativar
+msgYes = Sim
+msgNo = Não
+msgLoading = Carregando...
 
 wrongEmailAddress = Endereço de email incorreto. Informe um endereço de email válido.
 
@@ -115,6 +118,7 @@ privateAreaAdvertisementType = Tipos de Anúncios
 privateAreaAdvertisement = Anúncios
 privateAreaComments = Comentários
 privateAreaSales = Promoções
+privateUseTerms = Termos de Uso
 
 privateAreaFormSeparatorHeader = >
 
@@ -126,6 +130,14 @@ privateAreaActionView = Consultar
 privateAreaActionDelete = Excluir
 privateAreaActionCancel = Cancelar
 privateAreaNoAction = Não existem ações para esta área
+
+################### state ###################
+state = estado
+stateTitle = Estado
+
+################### city ###################
+city = cidade
+cityTitle = Cidade
 
 ################### administrator ###################
 administrator = administrador
@@ -152,6 +164,7 @@ userAccountHadBeenUnlocked = O usuário foi ativado com sucesso.
 userAccountActivatedSuccessfully = Usuário Ativado com Sucesso. Faça seu Login!
 userAccountActivatedProblem = Tentativa de ativação inválida
 userAccountUserNotActivatedYet = Usuário ainda não ativado. Ative o seu usuário na sua caixa de entrada de email indicado no cadastro.
+userAccountStateAndCityAreRequired = Estado e a Cidade são campos obrigatórios.
 
 ################### advertisement ###################
 advertisement = anúncio
@@ -188,6 +201,9 @@ advertisementInvalidSalesCode = Código promocional inválido
 advertisementViewPublic = Visualizar Anúncio
 advertisementAccountHadBeenLocked = O anúncio foi bloqueado com sucesso.
 advertisementAccountHadBeenUnlocked = O anúncio foi ativado com sucesso.
+adverrtisementUseTerm = Termos de Uso
+advertisementAgreeTerms = Eu li e aceito todos os termos de uso acima mencioandos para publicação de anúncios.
+advertisementAgreeIsRequired = Aceitar os termos de uso é obrigatório para poder publicar um anúncio.
 
 ################### sales ###################
 sales = promoção
@@ -197,3 +213,12 @@ category = categoria
 
 ################### advertisement type ###################
 advertisementType = tipo de anúncio
+
+################### use terms ###################
+useTerm = termo de uso
+useTermTitle = Título
+useTermText = Texto do Termo
+useDefault = Ativo
+useTermDefaultNotFound = Não existe nenhum Termo de Uso cadastrado no sistema.
+useTermDefaultCantBeDeleted = Este termo de uso não pode ser excluído, sempre deve existir um termo de uso ativo (padrão).
+useTermHadBeenUnlocked = O Termo de uso foi ativado com sucesso.
