--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/resource/messages_pt_BR.properties
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/resource/messages_pt_BR.properties
@@ -1,11 +1,11 @@
-appTitle = Barganhas.com
+appTitle = Vendas & Barganhas
 appStart = Início
 
-aboutTheSite = Sobre o Barganhas.com
+aboutTheSite = Sobre o Vendas & Barganhas
 termsOfTheSite = Termos e Condições Gerais
 contact = Contato
 mapOfTheSite = Mapa do Site
-copyRightMsg = Copyright © 2012-2012 Barganhas.com.br LTDA. - empresa do grupo Barganhas.com.
+copyRightMsg = Copyright © 2012-2012 www.vendasebarganhas.com.br LTDA. - empresa do grupo Vendas & Barganhas.
 buttonFind = Buscar
 buttonClear = Limpar
 
@@ -95,11 +95,11 @@ actionConfirmUnlock = if(!confirm('Deseja ativar este registro?')){return false;
 ################### private area ###################
 privateAreaAdminTitle = Área Restrita Barganhas.com
 privateAreaFillFieldsToSignIn = Forneça os Dados para Entrar
-privateAreaLoginUser = Usuário
+privateAreaLoginUser = Nome do Usuário
 privateAreaLoginPassword = Senha
 privateAreaLoginPasswordSecret = secret
 privateAreaLoginEmail = Email
-privateAreaLoginName = Nome
+privateAreaLoginName = Nome Completo
 privateAreaLoginButton = Entrar
 
 privateAreaLoginConfirmEmail = Confirmar Email
@@ -210,6 +210,7 @@ adverrtisementUseTerm = Termos de Uso
 advertisementAgreeTerms = Eu li e aceito todos os termos de uso acima mencioandos para publicação de anúncios.
 advertisementAgreeIsRequired = Aceitar os termos de uso é obrigatório para poder publicar um anúncio.
 advertisementSearchTextRequired = Por favor, indique um texto válido para busca.
+advertisementUserAccount = Barganhante ( Anunciante )
 
 ################### sales ###################
 sales = promoção
