--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/resource/messages_pt_BR.properties
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/resource/messages_pt_BR.properties
@@ -14,6 +14,7 @@ registerLastname = Sobrenome
 registerEmail = E-mail
 registerPassword = Senha
 registerYourSelf = Cadastrar-se
+registerContactsData = Dados para Contato
 applyRegistering = Cadastrar
 alreadyRegistered = Já sou cadastrado
 enterMsg = Entrar
@@ -38,6 +39,7 @@ msgRealCurrency = R$
 msgCommentsArea = Área para Comentários
 msgAddComment = adicionar novo comentário
 msgTurnBack = Voltar
+msgRemainingCharacters = caracteres restante.
 
 msgClickHere = Clique aqui
 msgNoneAdvertisementToMe = Nenhum anúncio encontrado.  
@@ -168,12 +170,19 @@ userAccountActivatedSuccessfully = Usuário Ativado com Sucesso. Faça seu Login!
 userAccountActivatedProblem = Tentativa de ativação inválida
 userAccountUserNotActivatedYet = Usuário ainda não ativado. Ative o seu usuário na sua caixa de entrada de email indicado no cadastro.
 userAccountStateAndCityAreRequired = Estado e a Cidade são campos obrigatórios.
+userAccountNicknameValidating = O campo {0} precisa ter o valor em minúsculo e iniciar com um caractere alfabético.
+userAccountContactPhoneNumberOne = Telefone 1 para contato
+userAccountContactPhoneNumberTwo = Telefone 2 para contato
+userAccountContactMail = Email para contato
 
 ################### advertisement ###################
 advertisement = anúncio
 advertisementAdvertisementType = Tipo do Anúncio
 advertisementContacts = Contatos
 advertisementListExchangeBy = Aceito trocar por
+advertisementIsNewProduct = Produto Novo ou Usado
+advertisementNewProduct = Produto Novo
+advertisementUseProduct = Produto Usado
 advertisementListPictures = Imagens do Anúncio
 advertisementAdvertisementTypeRequiredField = Tipo do Anúncio é um campo obrigatório
 advertisementTitleRequiredField = Título é um campo obrigatório
@@ -201,7 +210,7 @@ advertisementPictures = Fotos do anúncio
 advertisementSheet = Capa (foto principal) do anúncio
 advertisementAtLeastOnePictureIsRequired = É obrigatório indicar pelo ao menos uma foto
 advertisementPublishUp = Publicar Anúncio
-advertisementWaysToPay = Formas de pagamento
+advertisementWaysToPay = Formas de Pagamento do Anúncio
 advertisementInvalidSalesCode = Código promocional inválido
 advertisementViewPublic = Visualizar Anúncio
 advertisementAccountHadBeenLocked = O anúncio foi bloqueado com sucesso.
@@ -211,6 +220,9 @@ advertisementAgreeTerms = Eu li e aceito todos os termos de uso acima mencioando
 advertisementAgreeIsRequired = Aceitar os termos de uso é obrigatório para poder publicar um anúncio.
 advertisementSearchTextRequired = Por favor, indique um texto válido para busca.
 advertisementUserAccount = Barganhante ( Anunciante )
+advertisementContactPhoneNumberOne = Telefone 1 para contato
+advertisementContactPhoneNumberTwo = Telefone 2 para contato
+advertisementContactMail = Email para contato
 
 ################### sales ###################
 sales = promoção
